# IdentifyStar

./: README.md
src/base_interfaces_demo/: CMakeLists.txt  package.xml
src/base_interfaces_demo/msg/: Star.msg  Stars.msg
src/my_test/: CMakeLists.txt  package.xml
src/my_test/include/my_test/: my_test_listener.hpp
src/my_test/src/: main.cpp  my_test_listener.cpp
src/project_01/: CMakeLists.txt  package.xml
src/project_01/include/project_01/: detector.hpp  detector_node.hpp  pnp_solver.hpp
src/project_01/src/: detector.cpp  detector_node.cpp  main.cpp  pnp_solver.cpp
src/red_point_serial_driver/: CMakeLists.txt  package.xml
src/red_point_serial_driver/include/red_point_serial_driver/: packet.hpp  red_point_serial_driver.hpp
src/red_point_serial_driver/src/: crc.cpp  main.cpp  red_point_serial_driver.cpp
src/star_serial_driver/: CMakeLists.txt  package.xml
src/star_serial_driver/config/: serial_driver.yaml
src/star_serial_driver/include/star_serial_driver/: crc.hpp  packet.hpp  star_serial_driver.hpp
src/star_serial_driver/launch/: serial_driver_launch.py
src/star_serial_driver/src/: crc.cpp  main.cpp  star_serial_driver.cpp
src/stars_serial_driver/: CMakeLists.txt  package.xml
src/stars_serial_driver/config/: serial_driver.yaml
src/stars_serial_driver/include/stars_serial_driver/: packet.hpp  stars_serial_driver.hpp
src/stars_serial_driver/launch/: serial_driver_launch.py
src/stars_serial_driver/src/: crc.cpp  stars_serial_driver.cpp
